Remove J2EE dependency for Base64 hash
While java.util.Base64 exists in Java 8 and newer, this app currently must target Java 7, so we need to ship our own Base64 encoder.